animiate = shared_module('animate',
                         'animate.cpp',
                         include_directories: [wayfire_api_inc, wayfire_conf_inc],
                         dependencies: [wlroots, pixman],
                         install: true,
                         install_dir: 'lib/wayfire/')
