plugins_common_inc = include_directories('.')

install_headers(['wayfire/plugins/common/preview-indication.hpp',
                 'wayfire/plugins/common/geometry-animation.hpp',
                 'wayfire/plugins/common/cairo-util.hpp',
                 'wayfire/plugins/common/simple-texture.hpp',
                 'wayfire/plugins/common/view-change-viewport-signal.hpp',
                 'wayfire/plugins/common/workspace-wall.hpp',
                 ], subdir: 'wayfire/plugins/common')
