decoration = shared_module('decoration',
                          ['decoration.cpp', 'deco-subsurface.cpp'],
                          include_directories: [wayfire_api_inc, wayfire_conf_inc],
                          dependencies: [wlroots, pixman, wf_protos, wfconfig, cairo],
                          install: true,
                          install_dir: 'lib/wayfire/')
