cmake_minimum_required(VERSION 3.1.0)
project(simple_plugins CXX)

include_directories(SYSTEM /usr/include/pixman-1)

add_library(move     SHARED "move.cpp")
add_library(resize   SHARED "resize.cpp")
add_library(expo     SHARED "expo.cpp")
add_library(grid     SHARED "grid.cpp")
add_library(switcher SHARED "switcher.cpp")
add_library(vswitch  SHARED "vswitch.cpp")
add_library(oswitch  SHARED "oswitch.cpp")
#add_library(sshot    SHARED "screenshot.cpp")
add_library(command  SHARED "command.cpp")
add_library(viewport_impl SHARED "workspace_viewport_implementation.cpp")

install(TARGETS move          DESTINATION lib/wayfire/)
install(TARGETS resize        DESTINATION lib/wayfire/)
install(TARGETS expo          DESTINATION lib/wayfire/)
install(TARGETS grid          DESTINATION lib/wayfire/)
install(TARGETS switcher      DESTINATION lib/wayfire/)
install(TARGETS vswitch       DESTINATION lib/wayfire/)
install(TARGETS oswitch       DESTINATION lib/wayfire/)
#install(TARGETS sshot         DESTINATION lib/wayfire/)
install(TARGETS command       DESTINATION lib/wayfire/)
install(TARGETS viewport_impl DESTINATION lib/wayfire/)
